<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/contraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.radiobutton.RadioButtonActivity">


    <TextView
        android:id="@+id/txvTypeClient"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="44dp"
        android:text="@string/txvTypeClient"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/rdgTypeClient"
        android:layout_width="97dp"
        android:layout_height="61dp"
        app:layout_constraintStart_toStartOf="@id/guideline2"
        app:layout_constraintTop_toBottomOf="@id/txvTypeClient"
        >

        <RadioButton
            android:id="@+id/rbtBussines"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/rbtBussines" />

        <RadioButton
            android:id="@+id/rbtParticular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/rbtParticular" />
    </RadioGroup>

    <include android:layout="@layout/layout_particular"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/rdgTypeClient"
        app:layout_constraintStart_toStartOf="@id/guideline2"/>

    <include android:layout="@layout/layout_bussines"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/rdgTypeClient"
        app:layout_constraintStart_toStartOf="@id/guideline2"/>



    <android.support.constraint.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1"/>


</android.support.constraint.ConstraintLayout>
